api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: nye0817/al2m-api-gateway  # Docker Hub에 올린 이미지 이름
        ports:
        - containerPort: 80
        imagePullPolicy: Always
